--- a/views/games/edit.ejs
+++ b/views/games/edit.ejs
@@ -30,7 +30,7 @@
         <label>Cover Image (.jpg/.png):
           <input type="text" name="coverImage" value="<%= game.coverImage %>" autocomplete="off">
         </label><br><br>
-        <button type="submit" id="add-game">Add Game</button>
+        <button type="submit" id="edit-game">Submit</button>
       </form>
     <% } %>
   </section>
